2001-10-03  Adam Fedor  <fedor@gnu.org>

	* Add support for custom views
	* GormClassManager.m (-allActionsForObject:): Add support for
	GormCustomView
	(-allOutletsForObject:): Likewise.
	(-classInfoForObject:): Likewise.
	* GormDocument.m (-loadDocument:): Decode GSCustomView
	as GormCustomView.
	(-saveDocument:): likewise for encoding.
	* GormCustomView.m: New class.
	* Palettes/2Controls/main.m: Add customview item.

2001-10-02  Adam Fedor  <fedor@gnu.org>

	* Palettes/2Controls/inspectors.m: Fix NSButton and popup button
	logic.
	* Palettes/2Controls/GormButtonInspector.gorm: Update for new popup
	coding in gui library.

2001-09-27  Adam Fedor  <fedor@gnu.org>

	* GormInspectorsManager.m (-setCurrentInspector:): Gracefully handle
	an inspector creation error.
	* GormWindowEditor.m (-editTextField:withEvent:): TextField value
	editor method.

	* Palettes/2Controls/inspectors.m: New NSBox, NSButtonCell, 
	NSMatrix, and NSTextField inspectors.

2001-09-17  Adam Fedor  <fedor@gnu.org>

	* GormWindowEditor.m
	(-_validateFrame:forViewPtr:withEvent:update:update): Allow resize
	if frame is already too small.
	* Palettes/2Controls/inspectors.m: Implement button type popup
	for button inspector.

2001-09-16  Adam Fedor  <fedor@gnu.org>

	* Fixes to handle matrixes better. Editable matrix cells. Improved
	editors for window size and buttons.
	* GormObjectEditor.m ([GormViewSizeInspector -init]): Add size
	form for resizing. New methods for resizing and obtaining
	window sizes.
	* GormMatrixEditor.m: New class for editing matrix cells.
	* GormWindowEditor.m (_editTextView:withEvent:) Moved to 
	GormMatrixEditor.m.
	(-_validateFrame:forViewPtr:withEvent:update:update): When replacing
	view with matrix detach old view and attach matrix to document.
	(-mouseDown:): Open matrix subeditor on double-click of matrix.
	(-deleteSelection): Detach subviews of a box before deleting box.

	* Palettes/2Controls/inspectors.m: New button inspector.
