@@ -1,3 +1,12 @@
+2001-10-04  Adam Fedor  <fedor@gnu.org>
+
+	* GormClassManager.m (-renameClass:): Change sender method to
+	work with fixed popupButtons.
+
+	* GormWindowEditor.m
+	(-_validateFrame:forViewPtr:withEvent:update:update): Don't compute
+	new intercell spacing when only onw row or col.
+
 2001-10-03  Adam Fedor  <fedor@gnu.org>
 
 	* Add support for custom views
